# PluginInterface

BrasselerFont-master/: .gitignore  Bertram.bf  README.md
cmake/boost/: FindBoost.cmake
cmake/breakpad/: FindBreakpad.cmake
cmake/common/: VersionInfo.rc.in  common.cmake  functions.cmake  git_subtree_pull.cmake.in  git_subtree_push.cmake.in  inspector.cmake  lib.cmake  package.cmake  plugins.cmake
cmake/eigen/: FindEigen3.cmake
cmake/opencv/: FindOpenCV.cmake  FindOpenCVStatic.cmake
cmake/pndriver/: FindPNDriver.cmake
cmake/qt/: FindQt5.cmake
cmake/qtsingleapplication/: FindQtSingleApplication.cmake
cmake/qtsoap/: FindQtSoap.cmake
cmake/qwt/: CMakeLists.qwt.txt  FindQwt.cmake
inspector/: alarmwidget.cpp
lib/: BSimaticident.cpp  BSimaticident.h  CMakeLists.txt  adsvalue.cpp  adsvalue.h  audittrail.cpp  audittrail.h  babstractgraphicsshapeitem.cpp  babstractgraphicsshapeitem.h  bbarcode.cpp  bbarcode.h  bdistancespinbox.cpp  bdistancespinbox.h  beckhofferrorcodes.h  bgraphicsellipseitem.cpp  bgraphicsellipseitem.h  bgraphicsgriditem.cpp  bgraphicsgriditem.h  bgraphicsitem.cpp  bgraphicsitem.h  bgraphicskeypointitem.cpp  bgraphicskeypointitem.h  bgraphicslineitem.cpp  bgraphicslineitem.h  bgraphicspathitem.cpp  bgraphicspathitem.h  bgraphicspixmapitem.cpp  bgraphicspixmapitem.h  bgraphicspolygonitem.cpp  bgraphicspolygonitem.h  bgraphicsrectitem.cpp  bgraphicsrectitem.h  bgraphicstextitem.cpp  bgraphicstextitem.h  bhsvcolormap.cpp  bhsvcolormap.h  bmessagebox.cpp  bmessagebox.h  boost_icl_support.h  bottlefeatureset.cpp  (+99 more)
(+1645 files in other folders)
